--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 @plugin "daisyui" {
-    themes: light --default, forest, cupcake, retro;
+    themes: light --default, forest, cupcake, retro, lemonade;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
